fix spacing at top of page and between each testimonial card

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,7 @@
 body {
   height: 100vh;
   padding: .5rem;
+  padding-top: 1rem;
   color: #18181B;
   background-color: #FFFFFF;
 
@@ -135,7 +136,7 @@ li {
 
 .review-card {
   background-color: #FFFFFF;
-  margin: 1rem 0;
+  margin: 1rem 0 2.5rem;
   padding: 1rem;
   /* border: solid 1px black; */
   border-radius: 20px;
